lib/AnyEvent/TLS.pm:         or croak "$dh_file: failed to open DH parameter file: $!";

6.2
	- documented Rocco fabricating statements about AnyEvent and me.
	- new module AnyEvent::IO, that is a frontend to either a pure-perl
          synchronous I/O implementation (AnyEvent::IO::Perl), or to the
          asynchronous I/O extension IO::AIO (AnyEvent::IO::IOAIO).
        - the default logging level was not properly documented in a variety of
          places, this has hopefully been rectified.
	- updated uts46data.pl for unicode 6.1.0.
        - made log messages genearted by AnyEvent submodules not
          include the package name anymore, as it will be logged
          by default already.
        - upgrade to the trick used by common-sense 3.5 to work
          around extra warning torture/breakage under perl 5.15.x.
        - log messages by anyevent are now ucfirst, are usually full
          sentences and do no longer include the package name.

6.14 Tue Jan 31 20:00:24 CET 2012
	- AnyEvent::Impl::Tk was broken due to a mysterious "die" inside,
          probably an editing mistake (reported by Darin McBride).

6.13 Thu Jan 12 07:27:01 CET 2012
	- AnyEvent::Util::fork_call checked for POSIX availability in the wrong way,
          causing it to fail if POSIX wasn't loaded already (analysed by Rock Power).
	- AnyEvent::Handle::push_read (line => did pass $1 directly, so
          regex-matching inside the callback would change the parameter, despite
          $1 being dynamically scoped per-block. this perl bug is now being
          worked around (testcase by Cindy Wang).

6.12 Mon Dec 12 13:21:10 CET 2011
	- $! was clobbered by subsequent calls in tcp_connect, due to
          the postpone not saving/restoring it (analyzed by Richard Garnish).

6.11 Tue Nov 22 10:36:05 CET 2011
	- Tk cannot create windows when tainted unless you set a title, so
          set a dummy title for AnyEvent's dummy mainwindow. How dummy.